Fixed alignment issues of the month and day labels, increased label padding.

--- a/calendar-heatmap.css
+++ b/calendar-heatmap.css
@@ -4,9 +4,6 @@
   width: 100%;
   @include user-select(none);
 }
-.calendar-heatmap .svg {
-  padding: 35px 0 0 35px;
-}
 .calendar-heatmap circle.circle {
   cursor: pointer;
 }
